<resources>
    <string name="app_name">InventoryManager</string>
    <string name="name">Name</string>
    <string name="insert_a_new_item">Insert a new item</string>
    <string name="price">Price</string>
    <string name="supplier_information">Supplier information</string>
    <string name="product_information">Product information</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier_phone_number">Supplier phone number</string>
    <string name="inventory_summery">Inventory summery</string>
    <string name="items_text">Items text</string>
    <string name="table_contains">The inventory table contains</string>
    <string name="items">items.</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="empty_view_subtitle_text">Get started by adding an item to the inventory</string>
    <string name="editor_activity_title_new_item">Add an item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="editor_insert_item_failed">Error with inserting a new item</string>
    <string name="editor_insert_item_successful">New item was successfully inserted</string>
    <string name="editor_update_item_failed">Item update failed</string>
    <string name="editor_update_item_successful">Update was sucessful</string>
    <string name="action_delete">Delete</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="editor_delete_item_failed">Item delete failed</string>
    <string name="editor_delete_item_successful">Item delete was successful</string>
    <string name="cancel">Cancel</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
</resources>
