<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <RelativeLayout
        android:id="@+id/product_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/aladin"
            android:text="@string/product_information"
            android:textSize="@dimen/header" />

        <EditText
            android:id="@+id/editText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_name"
            android:fontFamily="@font/aladin"
            android:hint="@string/name"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editText_price"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:fontFamily="@font/aladin"
            android:hint="@string/price"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editQuantity"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_price"
            android:fontFamily="@font/aladin"
            android:hint="@string/quantity"
            android:maxLines="1" />
    </RelativeLayout>


    <TextView
        android:id="@+id/textView_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:fontFamily="@font/aladin"
        android:text="@string/supplier_information"
        android:textSize="@dimen/header" />

    <EditText
        android:id="@+id/supplier_name"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_supplier"
        android:fontFamily="@font/aladin"
        android:hint="@string/supplier_name"
        android:maxLines="1" />

    <EditText
        android:id="@+id/supplier_phone"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/supplier_name"
        android:fontFamily="@font/aladin"
        android:hint="@string/supplier_phone_number"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <!-- Buttons -->
    <Button
        android:id="@+id/button_increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Increase quantity"
        android:layout_marginLeft="@dimen/margin"
        />

    <Button
        android:id="@+id/button_decrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_increase"
       android:layout_marginRight="@dimen/margin"
        android:text="Decrease quantity" />
        <Button
            android:id="@+id/button_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_increase"
android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/margin"
            android:text="Call supplier" />
    </RelativeLayout>
</LinearLayout>